# formula

./: .appveyor.yml  .gitignore  .isort.cfg  .pylintrc  .travis.yml  CLAUDE.md  MANIFEST.in  README.md  bootstrap.bat  bootstrap.sh  pyproject.toml  setup.py  setup_helpers.py  trace.txt
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  publish-to-pypi.yml  test-mac.yml  test-ubu.yml  test-win.yml
boost_headers/: update_command.py
conda.recipe/: meta.yaml
doc/: tests.md
docs/: conf.py
formula/: __init__.py  formula.py
src/: ccseval.cpp  ccseval.hpp  csconstants.hpp  cseval.cpp  cseval.h  cseval.hpp  cseval_complex.cpp  cseval_complex.hpp  csformula.cpp  csformula.h  csformula.hpp  main.cpp
src/cpp/cseval/: cseval.cpp
src/cpp/csformula/: csformula.cpp  csformula.hpp  csvisitors.hpp
src/cseval/: cseval.cpp  cseval.hpp  cseval_complex.cpp  cseval_complex.hpp
src/csformula/: csformula.cpp  csformula.hpp
src/formula/: __init__.py  formula.py
tests/: test.py  test_formula_simple_cases.py  test_number_comparison_precision.py  test_number_constructor_types.py  test_number_eq_notimplemented.py  test_number_hashable.py  test_number_reverse_arithmetic.py  test_number_symbolic.py  test_operations.py  test_pile_of_cases.py  test_simple.py  test_solver_derivative_validation.py  test_solver_format_alias.py  test_solver_missing_values_message.py  test_solver_no_mutate.py  test_solver_one_var_shortcut_invariants.py  test_solver_precision_bounds.py  test_solver_rejects_non_mapping_values.py
tests/functions/: __init__.py
tests/functions/one_arg/: __init__.py  test_abs.py  test_acos.py  test_asin.py  test_atan.py  test_cos.py  test_exp.py  test_log.py  test_sign.py  test_sin.py  test_sqrt.py  test_tan.py
tests/functions/two_arg/: __init__.py  test_add.py  test_div.py  test_mul.py  test_pow.py  test_sub.py
